# heroes3_with_ai

./: CMakeLists.txt  CharacterSave2.txt  Doxyfile  Makefile  start.sh  valgrind.supp
app/: CMakeLists.txt  Main.cc
documentation/: IsItTested.md  README.md  SaveFormat.md  object_creation_manual.hpp  styl_kodowania.md  zadanie.md
in/: world_map_in.txt  world_map_in_2.txt
include/Algorithms/: MinimaxAI.h
include/Artifacts/: Artifact.h
include/Battle/: Battle.h  BattleField.h  BattleObstacle.h  Tile.h  TileObject.h
include/Battle/Moves/: AttackMove.h  Move.hpp  MoveFactory.h  MoveMove.h  WaitMove.h
include/Characters/: Character.h  SecondarySkill.h
include/Exceptions/: BadCopyException.hpp  CoordinateOutOfBoutdsException.hpp  DamagedSaveException.hpp  EmptySlotException.hpp  ExpiredWeakPtrException.hpp  FullBackpackException.hpp  InvalidArtifactTypeException.hpp  InvalidFactionTypeException.hpp  InvalidImageException.hpp  InvalidInputFileException.hpp  InvalidMapMoveException.hpp  InvalidSecondarySkillException.hpp  InvalidSlotException.hpp  InvalidTerrainException.hpp  InvalidTextureException.hpp  InvalidUnitNameException.hpp  InvalidWarMachineException.hpp  NotEmptySlotException.hpp  NotOpenWindowException.hpp  ObjectNotFoundException.hpp  TileNotFoundException.hpp  UnknownStateException.hpp  _NotImplementedException.hpp
include/Game/: Game.h  KeyHandler.h  KeyboardInput.hpp
include/Graphic/: Printable.h  SpriteVisitor.h  Visitor.h
include/Graphic/Renderers/: IRenderer.hpp  MapRenderer.h
include/LoadAndSaveTools/: CharacterJsonLoader.h  CharacterLoader.h  CharacterSaver.h  IJsonLoader.hpp  ILoader.hpp  ISaver.h  MapLoader.h  MapSaver.h
include/Magic/: Spell.h  SpellBook.h
include/Miscellaneous/: ArtifactLib.h  Coords.h  ProjectLib.h  SpriteNameLib.h  SpriteNumericLib.h  UnitLib.h
include/Player/: AIPlayer.h  HumanPlayer.h  Player.h
include/Player/Personalities/: Personality.h
include/Resource/: Resource.h
include/Units/: Faction.hpp  RangedUnit.h  Unit.h  UnitStack.h  WarMachine.hpp
include/WorldMap/: Building.h  GridTile.h  MapObject.h  OverworldObstacle.h  WorldMap.h
include/WorldMap/Castles/: Castle.h  CastleInterface.h
logs/: valgrind_28.04.2025_18.10_log.txt  valgrind_log_3.06_19.39.txt  valgrind_out_3.06_19.41.txt
saves/: CharacterSave1.txt  CharacterSave2.nggr  CharacterSave2Decoded.txt  CharacterSave3.json
src/Algorithms/: CMakeLists.txt  MinimaxAI.cc
src/Artifacts/: Artifact.cc  CMakeLists.txt
src/Battle/: Battle.cc  BattleObstacle.cc  Battlefield.cc  CMakeLists.txt  Tile.cc  TileObject.cc
src/Battle/Moves/: AttackMove.cc  MoveFactory.cc  MoveMove.cc  WaitMove.cc
src/Characters/: CMakeLists.txt  Character.cc  SecondarySkill.cc
src/Game/: CMakeLists.txt  Game.cc  KeyHandler.cc
src/Graphic/: CMakeLists.txt  SpriteVisitor.cc
src/Graphic/Renderers/: MapRenderer.cc
src/LoadAndSaveTools/: CMakeLists.txt  CharacterJsonLoader.cc  CharacterLoader.cc  CharacterSaver.cc  ISaver.cc  MapLoader.cc  MapSaver.cc
src/Magic/: CMakeLists.txt  Spell.cc  SpellBook.cc
src/Miscellaneous/: CMakeLists.txt  Coords.cc
src/Player/: CMakeLists.txt  Player.cc
src/Resource/: CMakeLists.txt  Resource.cc
src/Units/: CMakeLists.txt  RangedUnit.cc  Unit.cc  UnitStack.cc
src/WorldMap/: Building.cc  CMakeLists.txt  GridTile.cc  MapObject.cc  OverworldObstacle.cc  WorldMap.cc
tests/: CMakeLists.txt  testArtifact.cc
tests/testBattle/: testBattle.cc  testBattlefield.cc
tests/testCharacter/: testCharacter.cc  testSecondarySkill.cc
tests/testGame/: testKeyHandler.cc
tests/testMiscellaneous/: testCoords.cc
tests/testUnits/: testUnit.cc
tests/testWorldMap/: testGridTile.cc  testWorldMap.cc
